# template-python-ml-api

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ml_api/: __init__.py  ai.py  main.py
tests/: test_ai.py  test_health.py
